--- a/src/assets/styles/05-utilities/style.css
+++ b/src/assets/styles/05-utilities/style.css
@@ -1246,6 +1246,7 @@
 
  .mm-spn.mm-spn--navbar.mm-spn--main:after
  {
+  color: #352110 !important;
   font-family:  'DINNextLTArabic-Regular' !important;
   
  }
@@ -1253,6 +1254,7 @@
 
  .mm-spn a
  {
+  color: #352110 !important;
   font-family:  'DINNextLTArabic-Regular' !important;
   background: none !important;
  }
@@ -1336,3 +1338,4 @@
     overflow-x: auto;
   }
 }
+
