--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -305,10 +305,10 @@
           </ul>
         
           <div class="menu-container" style="color: #352110 !important;">
-            <a class="lg:hidden mburger mburger--collapse leading-none rtl:ml-4 ltr:mr-4" href="#mobile-menu" style="font-family: DiodrumArabic !important; color: #352110 !important;" aria-label="Open-menu">
-                <i class="fa-solid fa-bars text-primary text-2xl" style="color: white !important;"></i>
+            <a style="color: #352110;" class="lg:hidden mburger mburger--collapse leading-none rtl:ml-4 ltr:mr-4" href="#mobile-menu" style="font-family: DiodrumArabic !important ; color: #352110 !important;" aria-label="Open-menu">
+                <i class="fa-solid fa-bars text-primary text-2xl" style="color: #352110 !important;"></i>
             </a>
-            <button style="color: rgb(255, 255, 255);" onclick="salla.event.dispatch('search::open')" class="search-btn1">
+            <button style="color: #352110;" onclick="salla.event.dispatch('search::open')" class="search-btn1">
                 <span class="fa-solid fa-magnifying-glass"></span>
             </button>
         </div>
@@ -350,7 +350,8 @@
             
             <li class="d-none d-xl-block" style="color: #352110 !important;">
              
-              <a href="#" style="color: #352110 !important;">الدورات التدريبية</a>
+              <a  style="color: #352110;" href="https://arriyadhroaster.com/%D8%A7%D9%84%D8%AF%D9%88%D8%B1%D8%A7%D8%AA-%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%D9%8A%D8%A9/c137650432">الدورات التدريبية</a>
+
             </li>
             <li class="d-none d-xl-block" style="color: #352110 !important;">
               <button style="color: 352110;" onclick="salla.event.dispatch('search::open')" class="search-btn">
