--- a/src/views/components/header/menu.twig
+++ b/src/views/components/header/menu.twig
@@ -25,7 +25,7 @@
 <button class="btn--close-sm close-mobile-menu sicon-cancel hidden"></button>
 #}
 
-<nav id="mobile-menu" class="mobile-menu" style="color: aquamarine !important;">
+<nav id="mobile-menu" class="mobile-menu">
     <ul class="main-menu">
         {% for menu_id, menu in menus %}
             {% include 'components.header._menu-item' with {is_root_menu:true} %}
