--- a/src/assets/styles/05-utilities/style.css
+++ b/src/assets/styles/05-utilities/style.css
@@ -151,8 +151,21 @@
 .ezdan-main-nav li a {
     font-size: 16px !important;
     font-weight: 300 !important;
-    color: #fff !important;
+    color: #ffffff !important;
 }
+
+  .ezdan-main-nav1 li a {
+      font-size: 16px !important;
+      font-weight: 300 !important;
+      color: #352110 !important;
+  }
+
+  .ezdan-main-nav1 a {
+
+    color: #352110 !important;
+  }
+
+
   .ezdan-product-nav .ezdan-main-nav li a {
     color: #352110;
   }
@@ -213,10 +226,14 @@
     .ezdan-main-menu ul li i {
       color: #ffffff;
     }
+
   
     .ezdan-product-nav .ezdan-main-menu ul li i {
       color: #352110;
     }
+
+
+
   
     #bar {
       cursor: pointer;
@@ -351,7 +368,7 @@
     max-width: 1080px;
     width: 100%;
     margin: auto;
-    text-align: center;
+    text-align: center !important;
   }
   
   .ezdan-coffee-top h3 {
