--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -304,9 +304,9 @@
             </li>
           </ul>
         
-          <div class="menu-container" style="color: #352110 !important;">
-            <a style="color: #352110;" class="lg:hidden mburger mburger--collapse leading-none rtl:ml-4 ltr:mr-4" href="#mobile-menu" style="font-family: DiodrumArabic !important ; color: #352110 !important;" aria-label="Open-menu">
-                <i class="fa-solid fa-bars text-primary text-2xl" style="color: #352110 !important;"></i>
+          <div class="menu-container " style="color: #352110 !important;">
+            <a  class="lg:hidden mburger mburger--collapse leading-none rtl:ml-4 ltr:mr-4" href="#mobile-menu" style="color: #352110 !important;" aria-label="Open-menu">
+                <i class="fa-solid fa-bars text-primary text-2xl"></i>
             </a>
             <button style="color: #352110;" onclick="salla.event.dispatch('search::open')" class="search-btn1">
                 <span class="fa-solid fa-magnifying-glass"></span>
@@ -320,7 +320,7 @@
          
        
 
-          <ul class="ezdan-main-nav d-xl-flex align-items-xl-center" style="color: #352110 !important;">
+          <ul class="ezdan-main-nav1 d-xl-flex align-items-xl-center" style="color: #352110 !important;">
           
               
             <li class="d-xl-none" id="cross" hidden>
