--- a/src/views/components/TextwithOrangIcon.twig
+++ b/src/views/components/TextwithOrangIcon.twig
@@ -13,8 +13,8 @@
                   {{orangtext.TextwithOrangIconstring}}
         </h3>
       
-        <div class="ezdan-arrow-down-icon mt-4">
-            <img 
+        <div class="ezdan-arrow-down-icon mt-4" >
+            <img style="align-items: center !important ;  display: inline; padding-top: 8% !important;" 
               draggable="false"
               src="{{orangtext.TextwithOrangIconimage}}"
               alt="arrow-down-icon"
