--- a/src/assets/styles/05-utilities/style.css
+++ b/src/assets/styles/05-utilities/style.css
@@ -97,7 +97,7 @@
     z-index: 99 !important;
     display: flex;        /* Establishes a flex container */
     align-items: center;  /* Vertically centers the items in the container */
-    
+   
     flex-wrap: nowrap;
 
   }
@@ -795,7 +795,8 @@
   }
   
   .ezdan-pdh-content {
-    padding-top: 400px;
+    padding-top: 350px !important;
+    
   }
   
   .ezdan-pdh-content h1 {
@@ -812,7 +813,22 @@
   }
 
 
+  @media only screen and (max-width: 767px) {
+    .ezdan-pdh-content h1 {
+      font-size: 50px !important;
+      font-weight: 600;
+      color: #ffffff;
+    }
+  
+    .ezdan-pdh-content h2 {
+      font-size: 30px !important;
+      font-weight: 400;
+      color: #ffffff;
+      padding-top: 10px;
+    }
+  }
 
+  
 
   
 
