--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -286,7 +286,7 @@
   
 
 <nav id="Navigation">
-  <div class="ezdan-navigation-wrapper" style="background-color: #f7f2ed !important; color: #352110 !important; position: relative ;">
+  <div class="ezdan-navigation-wrapper" style="background-color: #f7f2ed !important; color: #352110 !important; position: relative">
     <div class="container">
       <div
         class="ezdan-navbar-wrapper d-flex justify-content-between align-items-center "   style="color: #352110 !important;"
