--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -306,7 +306,7 @@
         
           <div class="menu-container " style="color: #352110 !important;">
             <a  class="lg:hidden mburger mburger--collapse leading-none rtl:ml-4 ltr:mr-4" href="#mobile-menu" style="color: #352110 !important;" aria-label="Open-menu">
-                <i class="fa-solid fa-bars text-primary text-2xl"></i>
+                <i class="fa-solid fa-bars text-primary text-2xl" style="color: #352110 !important;"></i>
             </a>
             <button style="color: #352110;" onclick="salla.event.dispatch('search::open')" class="search-btn1">
                 <span class="fa-solid fa-magnifying-glass"></span>
@@ -388,7 +388,7 @@
 
               <div class="menu-items">
                   <salla-cart-summary class="ml-4 rtl:ml-[unset] rtl:mr-4" style="color: 352110;">
-                      <i slot="icon" style="color: 352110;" class="fa-solid fa-cart-shopping"></i>
+                      <i slot="icon" style="color: #352110 !important;" class="fa-solid fa-cart-shopping"></i>
                   </salla-cart-summary>
           
                   {% if user.type == 'user' %}
