--- a/src/assets/styles/05-utilities/style.css
+++ b/src/assets/styles/05-utilities/style.css
@@ -928,6 +928,8 @@
   }
   
 
+  
+
 
   .s-quantity-input-container {
     display: flex;
@@ -946,7 +948,7 @@
    .s-button-element s-button-btn s-button-solid s-button-wide s-button-primary s-button-loader-center
     {
 
-      background-color: #00a56e !important;
+      background-color: #352110 !important;
     }
 
     .s-quantity-input-input
@@ -991,6 +993,7 @@
 .s-button-text {
 
   overflow: visible !important;
+
 }
 
 
@@ -1367,6 +1370,7 @@
       justify-content: flex-start; /* Align items to the left */
       align-items: center; /* Align items vertically in the center */
       width: 100%; /* Ensure it takes the full width of the screen */
+     
   }
 }
 
@@ -1378,8 +1382,86 @@
     flex-wrap: nowrap;   /* Prevents wrapping of items to a new line */
     display: flex;
     overflow-x: auto;
+    
   }
 }
 
 
 
+@media (min-width: 300px) and (max-width: 767px){
+.ezdan-product-hero-content {
+    padding-top: 5%!important;
+}
+
+
+
+
+.s-button-element s-button-btn s-button-solid s-button-wide s-button-primary s-button-loader-center
+{
+
+  background-color: #352110 !important;
+}
+
+.s-quantity-input-input
+{
+  background-color: #f7f2ed !important;
+}
+.s-button-wrap svg {
+  height: 1.25rem;
+  width: 1.25rem;
+  fill: currentColor;
+  display: none;
+}
+
+.s-button-primary {
+  
+  font-weight: 600 !important;
+  color: #ffffff !important;
+  background: #352110 !important;
+  font-size: 14px !important;
+  padding-top: 0px;/* Updated padding for vertical centering */
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+  border: 1px solid #352110 !important;
+  align-items: center !important;
+  border-radius: 0 !important;
+  flex: auto;
+  width: 13px !important;  /* Set the width of the button */
+  height: 20px !important; 
+  display: flex !important;
+}
+.s-button-text {
+  font-size: 11px !important;
+
+}
+
+
+
+
+.s-button-primary-outline {
+font-size: 14px !important;
+font-weight: 600 !important;
+color: #352110 !important;
+padding-top: 0px;/* Updated padding for vertical centering */
+padding-right: 0px;
+padding-bottom: 0px;
+padding-left: 0px;
+border: 1px solid #3725194a !important;
+/* Ensures text is not cut off */
+width: 13px !important; 
+  height: 20px !important; 
+
+}
+
+
+.s-button-primary-outline:hover {
+/* Keeping the hover state the same as the normal state */
+color: #352110 !important;
+background: transparent !important;
+border: 1px solid #3725194a !important;
+}
+
+
+
+}
