--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -84,9 +84,9 @@
 {% block content %}
     <div class="container" style="background-color: #f7f2ed;">
         {# add breadcumbs container in pages to make a space in case breadcrumbs is off #}
-        <nav class="breadcrumbs w-full py-5">
+    {#   <nav class="breadcrumbs w-full py-5">
             {% component 'header.breadcrumbs' %}
-        </nav>
+        </nav>#} 
         <div class="flex flex-col items-start md:flex-row" id="product-{{ product.id }}">
             <div class="sidebar md:sticky top-24 w-full md:!w-2/4 rtl:ml-8 ltr:mr-8 pb-8 md:pb-16 overflow-hidden shrink-0">
                 {% set has_many_images = product.images|length > 1 %}
