--- a/public/app.css
+++ b/public/app.css
@@ -14658,6 +14658,7 @@ h2.title {
     padding-bottom: 10px;
   }
 .ezdan-footer-nav li {
+    margin-right: 5px;
     padding: 5px 0;
   }
 .ezdan-footer-nav li a {
@@ -15185,12 +15186,7 @@ h2.title {
 {
   background-color: #f7f2ed !important;
 }
-.s-button-wrap svg {
-  height: 1.25rem;
-  width: 1.25rem;
-  fill: currentColor;
-  display: none;
-}
+
 
 .s-button-primary {
   
@@ -15205,6 +15201,7 @@ h2.title {
   height: 20px !important; 
   display: flex !important;
 }
+
 
 .s-button-primary {
   padding-top: 0px;/* Updated padding for vertical centering */
@@ -15257,6 +15254,30 @@ border: 1px solid rgba(55,37,25,0.2902) !important;
 
 
 
+}
+.p-2 {
+  padding: .5rem !important
+}
+.p-2 {
+  word-wrap: break-word
+}
+.px-5 {
+  padding-right: 3rem !important;
+  padding-left: 3rem !important
+}
+.mb-3 {
+  margin-bottom: 1rem !important
+}
+.text-gray-900 leading-6 {
+
+  color: #371a08 !important;
+}
+.mb-5 {
+  margin-bottom: 1.5rem !important
+}
+.s-login-modal-link 
+{
+  color: #371a08 !important;
 }
 /*
  ! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com
@@ -15997,7 +16018,14 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
   padding-top: 0.5rem}
 .btn:hover{opacity:0.8}
 .form-label{display:block;font-size:0.875rem;line-height:1.25rem;font-weight:500;--tw-text-opacity:1;color:rgba(17, 24, 39, 1);color:rgba(17, 24, 39, var(--tw-text-opacity));
-  margin-bottom: 0.25rem}
+    margin-bottom: .25rem}
+.form-label leading-6 {
+
+  color: #371a08;
+}
+.form-label {
+  margin-bottom: 0.25rem;
+}
 .has-error .s-form-label{color:#ff443a}
 .has-error .s-form-control, .has-error .s-tel-input-control, .has-error .s-datetime-picker-input{border-color:#ff443a;color:#ff443a}
 .toggle-checkbox .s-toggle-switcher{display:inline-block;background:#ccc;border-radius:16px;width:40px;height:25px;position:relative;vertical-align:middle;transition:background 0.25s;}
@@ -16032,6 +16060,20 @@ textarea.s-input{height:6rem}
 .s-hidden{display:none}
 .s-block{display:block}
 .s-form-control{display:block;width:100%;border-radius:.75rem;border-width:1px;--tw-border-opacity:1;border-color:rgba(209, 213, 219, 1);border-color:rgba(209, 213, 219, var(--tw-border-opacity));--tw-bg-opacity:1;background-color:rgba(255, 255, 255, 1);background-color:rgba(255, 255, 255, var(--tw-bg-opacity));font-size:0.875rem;line-height:1.25rem;--tw-text-opacity:1;color:rgba(17, 24, 39, 1);color:rgba(17, 24, 39, var(--tw-text-opacity));
+    border: 1px solid #dee2e6;
+    border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
+    --bs-bg-opacity: 1;
+    background-color: rgba(255, 255, 255, 1);
+    background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity));
+    border-radius: 0.375rem;
+    border-radius: var(--bs-border-radius);
+  word-wrap: break-word;
+  padding: .5rem}
+.s-form-control leading-6 {
+
+  color: #371a08;
+}
+.s-form-control {
   border: 1px solid #dee2e6;
   border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
   padding: 0.5rem;
@@ -16039,7 +16081,8 @@ textarea.s-input{height:6rem}
   background-color: rgba(255, 255, 255, 1);
   background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity));
   border-radius: 0.375rem;
-  border-radius: var(--bs-border-radius)}
+  border-radius: var(--bs-border-radius);
+}
 .s-form-control:focus{border-color:#414042;border-color:var(--color-primary);--tw-ring-offset-shadow:var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);--tw-ring-shadow:var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);box-shadow:var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color), var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color), 0 0 rgba(0,0,0,0);box-shadow:var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 rgba(0,0,0,0))}
 .s-form-control {
     display: block;
@@ -16602,17 +16645,21 @@ textarea.s-form-control.is-invalid {
 .was-validated .input-group > .s-form-control:not(:focus):invalid {
   z-index: 4;
 }
-.s-form-label{color:rgba(17, 24, 39, 1);color:rgba(17, 24, 39, var(--tw-text-opacity));
+.s-form-label{display:block;font-size:0.875rem;line-height:1.25rem;font-weight:500;--tw-text-opacity:1;color:rgba(17, 24, 39, 1);color:rgba(17, 24, 39, var(--tw-text-opacity));
+    margin-bottom: .25rem}
+.s-form-label leading-6 {
+
+  color: #371a08;
+}
+.s-form-label {
     margin-bottom:0.625rem;
     display:block;
     font-size:0.875rem;
     line-height:1.25rem;
     font-weight:700;
     --tw-text-opacity:1;
-    color:rgb(55 65 81 / 1)}
-@supports (color: rgb(0 0 0 / 0)) and (top: var(--f)){
-.s-form-label{
-    color:rgb(55 65 81 / var(--tw-text-opacity))}
+    color:rgba(55, 65, 81, 1);
+    color:rgba(55, 65, 81, var(--tw-text-opacity));
 }
 @media (min-width: 640px){
 .s-form-label{margin-top:1px}}
@@ -16985,6 +17032,20 @@ input[type=radio].sr-only:checked ~ div.s-count-down-end-text {
 .s-count-down-text-center{
   text-align: center}
 .s-datetime-picker-input{display:block;width:100%;border-radius:.75rem;border-width:1px;--tw-border-opacity:1;border-color:rgba(209, 213, 219, 1);border-color:rgba(209, 213, 219, var(--tw-border-opacity));--tw-bg-opacity:1;background-color:rgba(255, 255, 255, 1);background-color:rgba(255, 255, 255, var(--tw-bg-opacity));font-size:0.875rem;line-height:1.25rem;--tw-text-opacity:1;color:rgba(17, 24, 39, 1);color:rgba(17, 24, 39, var(--tw-text-opacity));
+    border: 1px solid #dee2e6;
+    border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
+    --bs-bg-opacity: 1;
+    background-color: rgba(255, 255, 255, 1);
+    background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity));
+    border-radius: 0.375rem;
+    border-radius: var(--bs-border-radius);
+  word-wrap: break-word;
+  padding: .5rem}
+.s-datetime-picker-input leading-6 {
+
+  color: #371a08;
+}
+.s-datetime-picker-input {
   border: 1px solid #dee2e6;
   border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
   padding: 0.5rem;
@@ -16992,7 +17053,8 @@ input[type=radio].sr-only:checked ~ div.s-count-down-end-text {
   background-color: rgba(255, 255, 255, 1);
   background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity));
   border-radius: 0.375rem;
-  border-radius: var(--bs-border-radius)}
+  border-radius: var(--bs-border-radius);
+}
 .s-datetime-picker-input:focus{border-color:#414042;border-color:var(--color-primary);--tw-ring-offset-shadow:var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);--tw-ring-shadow:var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);box-shadow:var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color), var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color), 0 0 rgba(0,0,0,0);box-shadow:var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 rgba(0,0,0,0))}
 .s-datetime-picker-input {
     display: block;
@@ -17718,7 +17780,7 @@ input[type=radio].sr-only:checked ~ div.s-file-upload-profile-image .s-file-uplo
 .s-filters-radio:checked:hover{border-color:#414042;border-color:var(--color-primary)}
 .s-filters-radio:checked:focus{border-color:#414042;border-color:var(--color-primary)}
 .s-filters-label{position:relative;display:flex;cursor:pointer;align-items:center;font-size:0.875rem;line-height:1.25rem;font-weight:500;
-    margin-bottom: 1rem}
+  margin-bottom: 1rem}
 .s-filters-label * {
   pointer-events: none;
 }
@@ -18000,10 +18062,20 @@ input[type=radio].sr-only:checked ~ div.s-gifting-remove-preview {
   margin: 0;
   text-align: center}
 .s-list-tile-item{position:relative;display:flex;align-items:center;--tw-bg-opacity:1;background-color:rgba(255, 255, 255, 1);background-color:rgba(255, 255, 255, var(--tw-bg-opacity));--tw-text-opacity:1;color:rgba(17, 24, 39, 1);color:rgba(17, 24, 39, var(--tw-text-opacity));text-decoration-line:none;
+    padding: 1rem;
+    --bs-bg-opacity: 1;
+    background-color: rgba(255, 255, 255, 1);
+    background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity))}
+.s-list-tile-item leading-6 {
+
+  color: #371a08;
+}
+.s-list-tile-item {
   padding: 1rem;
   --bs-bg-opacity: 1;
   background-color: rgba(255, 255, 255, 1);
-  background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity))}
+  background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity));
+}
 .s-list-tile-item-href{cursor:pointer}
 .s-list-tile-item-href * {
   pointer-events: none;
@@ -18014,6 +18086,10 @@ input[type=radio].sr-only:checked ~ div.s-gifting-remove-preview {
 .s-list-tile-item-subtitle{font-size:0.875rem;line-height:1.25rem}
 .s-loading-fill-color{fill:#414042;fill:var(--color-primary)}
 .s-localization-modal-title{font-size:1rem;line-height:1.5rem;font-weight:500;--tw-text-opacity:1;color:rgba(17, 24, 39, 1);color:rgba(17, 24, 39, var(--tw-text-opacity))}
+.s-localization-modal-title leading-6 {
+
+  color: #371a08;
+}
 .s-localization-modal-section{margin-bottom:2rem}
 .s-localization-modal-label-slot{flex-grow:1}
 .s-localization-modal-inner{width:100%}
@@ -18346,11 +18422,12 @@ input[type=radio].sr-only:checked ~ div.s-maintenance-alert-close {
     vertical-align: middle;
     border: 1px solid #dee2e6;
     border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
-    padding: .5rem;
     text-align: center;
     --bs-text-opacity: 1;
     color: rgba(255, 255, 255, 1);
-    color: rgba(var(--bs-white-rgb), var(--bs-text-opacity))}
+    color: rgba(var(--bs-white-rgb), var(--bs-text-opacity));
+  word-wrap: break-word;
+  padding: .5rem}
 .s-maintenance-alert-btn * {
   pointer-events: none;
 }
@@ -18390,9 +18467,11 @@ input[type=radio].sr-only:checked ~ div.s-map-search-wrapper {
   margin: 3rem;
 }
 .s-map-search-wrapper input{height:2.5rem;width:100%;
+  word-wrap: break-word;
   padding: 0.5rem}
 [dir="rtl"] .s-map-search-wrapper input{text-align:right}
 .s-map-search-results{margin-top:0px;display:flex;height:6rem;flex-direction:column;
+  word-wrap: break-word;
   padding: 0.5rem;
   margin-top: 0}
 .s-map-modal-body .s-loading-container{position:absolute;margin:0px;padding:5rem;
@@ -18504,6 +18583,10 @@ input[type=radio].sr-only:checked ~ div.s-modal-close {
   background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity))}
 .s-modal-bg-primary svg{fill:#ff6767;fill:var(--color-primary-reverse)}
 .s-modal-title{font-size:1.125rem;font-weight:700;line-height:1.5rem;--tw-text-opacity:1;color:rgba(17, 24, 39, 1);color:rgba(17, 24, 39, var(--tw-text-opacity))}
+.s-modal-title leading-6 {
+
+  color: #371a08;
+}
 @media (min-width: 640px){
 .s-modal-title{margin-bottom:0.5rem}}
 .s-modal-sub-title{font-size:0.875rem;line-height:1.25rem;--tw-text-opacity:1;color:rgba(107, 114, 128, 1);color:rgba(107, 114, 128, var(--tw-text-opacity))}
@@ -18688,7 +18771,14 @@ input[type=radio].sr-only:checked ~ div.s-modal-close {
 [dir="rtl"] .s-offer-modal-discount-table-cell{text-align:left !important}
 .s-offer-modal-type-discounts-table .s-modal-body{position:relative !important}
 .s-placeholder-title{font-size:1rem;line-height:1.5rem;--tw-text-opacity:1;color:rgba(17, 24, 39, 1);color:rgba(17, 24, 39, var(--tw-text-opacity));
-  margin-bottom: 0.25rem}
+    margin-bottom: .25rem}
+.s-placeholder-title leading-6 {
+
+  color: #371a08;
+}
+.s-placeholder-title {
+  margin-bottom: 0.25rem;
+}
 .s-placeholder-description{font-size:0.875rem;line-height:1.25rem;--tw-text-opacity:1;color:rgba(156, 163, 175, 1);color:rgba(156, 163, 175, var(--tw-text-opacity))}
 .s-placeholder-icon{fill:#e5e7eb;
   margin-bottom: 1.5rem}
@@ -19427,6 +19517,7 @@ input[type=radio].sr-only:checked ~ div.s-product-options-donation-amount-curren
   border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
   margin-top: 3rem}
 .s-product-size-guide-skeleton-table td{border-width:1px;--tw-border-opacity:1;border-color:rgba(229, 231, 235, 1);border-color:rgba(229, 231, 235, var(--tw-border-opacity));line-height:1.25rem;
+  word-wrap: break-word;
   border: 1px solid #dee2e6;
   border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
   padding: 0.5rem}
@@ -19538,6 +19629,7 @@ input[type=radio].sr-only:checked ~ div.s-product-options-donation-amount-curren
   margin-top: 0.5rem;
   margin-bottom: 0.5rem}
 .s-quick-order-checkbox-container input{margin-left:0.5rem;height:2.5rem;width:100%;border-radius:.75rem;border-width:1px;--tw-border-opacity:1;border-color:rgba(229, 231, 235, 1);border-color:rgba(229, 231, 235, var(--tw-border-opacity));
+  word-wrap: break-word;
   border: 1px solid #dee2e6;
   border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
   margin-bottom: 0.5rem;
@@ -19568,6 +19660,7 @@ input[type=radio].sr-only:checked ~ div.s-quick-order-expandable .s-form-group >
 .s-quick-order-flex-input salla-tel-input{height:2.5rem;width:100%}
 .s-quick-order-errors p{font-size:0.875rem;line-height:1.25rem;--tw-text-opacity:1;color:rgba(185, 28, 28, 1);color:rgba(185, 28, 28, var(--tw-text-opacity))}
 .s-quick-order-confirm{display:flex;align-items:center;justify-content:center;border-radius:.75rem;border-width:1px;
+  word-wrap: break-word;
   border: 1px solid #dee2e6;
   border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
   padding: 0.5rem;
@@ -20199,10 +20292,20 @@ input[type=radio].sr-only:checked ~ div.s-scopes-search-icon {
 [dir="rtl"] .s-scopes-search-icon{left:auto;right:0px;padding-left:0px;padding-right:0.75rem}
 .s-scopes-search-icon svg{height:1.25rem;width:1.25rem;fill:#9ca3af}
 .s-scopes-search-input{display:block;width:100%;border-radius:.75rem;border-width:1px;--tw-border-opacity:1;border-color:rgba(209, 213, 219, 1);border-color:rgba(209, 213, 219, var(--tw-border-opacity));--tw-bg-opacity:1;background-color:rgba(249, 250, 251, 1);background-color:rgba(249, 250, 251, var(--tw-bg-opacity));padding:0.625rem;padding-left:2.5rem;font-size:0.875rem;line-height:1.25rem;--tw-text-opacity:1;color:rgba(17, 24, 39, 1);color:rgba(17, 24, 39, var(--tw-text-opacity));
+    border: 1px solid #dee2e6;
+    border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
+    border-radius: 0.375rem;
+    border-radius: var(--bs-border-radius)}
+.s-scopes-search-input leading-6 {
+
+  color: #371a08;
+}
+.s-scopes-search-input {
   border: 1px solid #dee2e6;
   border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
   border-radius: 0.375rem;
-  border-radius: var(--bs-border-radius)}
+  border-radius: var(--bs-border-radius);
+}
 .s-scopes-search-input:focus{--tw-ring-color:var(--color-primary)}
 [dir="rtl"] .s-scopes-search-input{padding-left:0px;padding-right:2.5rem}
 .s-scopes-input-wrap{display:flex;align-items:center;
@@ -20869,6 +20972,10 @@ input[type=radio].sr-only:checked ~ div.s-user-menu-red-dot .s-user-menu-avatar-
 .s-user-settings-section-deactivate-user .s-list-tile-item-content{flex:1 0 85%}
 .s-user-settings-section-deactivate-user .s-list-tile-item-action{flex:1 1 100%;margin-top:1rem}}
 .s-user-settings-section-title{font-size:1rem;line-height:1.5rem;--tw-text-opacity:1;color:rgba(17, 24, 39, 1);color:rgba(17, 24, 39, var(--tw-text-opacity))}
+.s-user-settings-section-title leading-6 {
+
+  color: #371a08;
+}
 .s-user-settings-section-subtitle{font-size:0.75rem;line-height:1rem;--tw-text-opacity:1;color:rgba(107, 114, 128, 1);color:rgba(107, 114, 128, var(--tw-text-opacity))}
 .s-user-settings-section-icon svg{height:1.25rem;width:1.25rem}
 .s-user-settings-confirmation{
@@ -34259,6 +34366,7 @@ input[type=radio].sr-only:checked ~ div.dropdown__menu {
 }
 .s-table thead th:last-child{text-align:right}
 .s-table tbody tr{position:relative;display:flex;border-bottom-width:8px;border-top-width:8px;--tw-border-opacity:1;border-color:rgba(249, 250, 251, 1);border-color:rgba(249, 250, 251, var(--tw-border-opacity));--tw-bg-opacity:1;background-color:rgba(255, 255, 255, 1);background-color:rgba(255, 255, 255, var(--tw-bg-opacity));transition-property:box-shadow;transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);transition-duration:500ms;
+  word-wrap: break-word;
   overflow: hidden;
   flex-direction: row;
   flex-wrap: wrap;
