--- a/src/assets/styles/05-utilities/style.css
+++ b/src/assets/styles/05-utilities/style.css
@@ -744,6 +744,7 @@
   }
   
   .ezdan-footer-nav li {
+    margin-right: 5px;
     padding: 5px 0;
   }
   
@@ -1406,12 +1407,7 @@
 {
   background-color: #f7f2ed !important;
 }
-.s-button-wrap svg {
-  height: 1.25rem;
-  width: 1.25rem;
-  fill: currentColor;
-  display: none;
-}
+
 
 .s-button-primary {
   
@@ -1464,4 +1460,30 @@ border: 1px solid #3725194a !important;
 
 
 
+}
+
+
+.p-2 {
+  overflow-wrap: break-word;
+  padding: .5rem !important
+}
+.px-5 {
+  padding-right: 3rem !important;
+  padding-left: 3rem !important
+}
+.mb-3 {
+  margin-bottom: 1rem !important
+}
+
+.text-gray-900 leading-6 {
+
+  color: #371a08 !important;
+}
+
+.mb-5 {
+  margin-bottom: 1.5rem !important
+}
+.s-login-modal-link 
+{
+  color: #371a08 !important;
 }
