--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -266,7 +266,7 @@
                 {% endif %}
 
                 <div class="flex rtl:space-x-reverse space-x-3">
-                    <salla-social-share class="inline-flex mb-5"></salla-social-share>
+                    <salla-social-share class="inline-flex mb-md-5"></salla-social-share>
 
                     <salla-button
                             class="btn--wishlist animated hidden sm:inline-flex"
@@ -612,7 +612,7 @@
 
 
 
-<section id="About-coffee">
+<section id="About-coffeealo">
 <div class="ezdan-about-coffee-wrapper2">
   <div class="container">
     <div class="ezdan-about-coffee-title2">
