--- a/public/app.css
+++ b/public/app.css
@@ -15766,6 +15766,7 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .max-w-lg{max-width:32rem}
 .max-w-none{max-width:none}
 .max-w-xs{max-width:20rem}
+.max-w-full{max-width:100%}
 .flex-1{flex:1 1 0%}
 .flex-none{flex:none}
 .shrink-0{flex-shrink:0}
@@ -15785,6 +15786,7 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .grid-cols-\[repeat\(2\2c minmax\(0\2c 1fr\)\)\]{grid-template-columns:repeat(2,minmax(0,1fr))}
 .flex-row{flex-direction:row}
 .flex-col{flex-direction:column}
+.flex-col-reverse{flex-direction:column-reverse}
 .flex-wrap{flex-wrap:wrap}
 .items-start{align-items:flex-start}
 .items-center{align-items:center}
@@ -15854,6 +15856,7 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .bg-green-50{--tw-bg-opacity:1;background-color:rgba(240, 253, 244, 1);background-color:rgba(240, 253, 244, var(--tw-bg-opacity))}
 .bg-primary{background-color:#414042;background-color:var(--color-primary)}
 .bg-white{--tw-bg-opacity:1;background-color:rgba(255, 255, 255, 1);background-color:rgba(255, 255, 255, var(--tw-bg-opacity))}
+.bg-darker{--tw-bg-opacity:1;background-color:rgba(14, 15, 15, 1);background-color:rgba(14, 15, 15, var(--tw-bg-opacity))}
 .bg-cover{background-size:cover}
 .bg-center{background-position:center}
 .bg-no-repeat{background-repeat:no-repeat}
@@ -37708,6 +37711,7 @@ svg {
 .lg\:mb-24{margin-bottom:6rem}
 .lg\:mb-8{margin-bottom:2rem}
 .lg\:mt-12{margin-top:3rem}
+.lg\:mb-0{margin-bottom:0px}
 .lg\:\!block{display:block !important}
 .lg\:block{display:block}
 .lg\:\!inline-block{display:inline-block !important}
@@ -37742,10 +37746,12 @@ svg {
 .lg\:shadow-default{--tw-shadow:5px 10px 30px #2B2D340D;;--tw-shadow-colored:5px 10px 30px var(--tw-shadow-color);box-shadow:0 0 rgba(0,0,0,0), 0 0 rgba(0,0,0,0), 5px 10px 30px #2B2D340D;;box-shadow:var(--tw-ring-offset-shadow, 0 0 rgba(0,0,0,0)), var(--tw-ring-shadow, 0 0 rgba(0,0,0,0)), var(--tw-shadow)}
 [dir="ltr"] .ltr\:lg\:ml-8{margin-left:2rem}
 [dir="ltr"] .ltr\:lg\:mr-8{margin-right:2rem}
+[dir="ltr"] .ltr\:lg\:mr-2{margin-right:0.5rem}
 [dir="ltr"] .ltr\:lg\:pl-10{padding-left:2.5rem}
 [dir="ltr"] .ltr\:lg\:pl-20{padding-left:5rem}
 [dir="rtl"] .rtl\:lg\:ml-8{margin-left:2rem}
 [dir="rtl"] .rtl\:lg\:mr-8{margin-right:2rem}
+[dir="rtl"] .rtl\:lg\:ml-2{margin-left:0.5rem}
 [dir="rtl"] .rtl\:lg\:pr-10{padding-right:2.5rem}
 [dir="rtl"] .rtl\:lg\:pr-20{padding-right:5rem}}
 @media (min-width: 1280px){
