--- a/src/views/components/footer/footer.twig
+++ b/src/views/components/footer/footer.twig
@@ -99,4 +99,23 @@
     <span class="text-sm copyright-text">{% hook copyright %}</span>
     {% component 'footer.payment-methods' %}
   </div>
+  <div class="flex flex-col-reverse lg:flex-row">
+    {# vat #}
+    {% if store.settings.tax.number %}
+    <div class="flex items-center justify-center rtl:lg:ml-2 ltr:lg:mr-2 mb-5 lg:mb-0">
+    {% if store.settings.tax.certificate %}
+    <a onclick="document.querySelector('#modal-value-tax').open()" href="#!" alt="{{ store.settings. tax.number }}" class="rtl:ml-2 ltr:mr-2">
+    <img src="{{ 'images/tax.png'|cdn }}" class="h-7 rounded-sm hover:opacity-80 transition-opacity" alt="value added tax">
+    </a>
+    
+    <salla-modal sub-title-first sub-title="{{ trans('common.elements.tax_number') }}" modal-title="{{ store.settings. tax.number }}" id="modal-value-tax">
+    <div class="flex justify-center max-w-full">
+    <img src="{{ store.settings.tax.certificate }}" alt="{{ store.settings. tax. number }}"/>
+    </div>
+    </salla-modal>
+    {% endif %}
+    <p class="text-sm">{{ trans('common.elements. tax_number') }} : {{ store.settings.tax.number }}</p>
+    </div>
+    {% endif %}
+
 </footer>
